--- a/lab3.css
+++ b/lab3.css
@@ -50,6 +50,8 @@ h1{
     color: deeppink;
     background-color: gray;
     margin-top: 50px;
+    margin-bottom: 10px;
+    margin-right: 20px;
 }
 .cochu{
     font-size: 25px;
