--- a/WEBCAFE/pratical.css
+++ b/WEBCAFE/pratical.css
@@ -1,29 +1,34 @@
 form{
     background-color: #3aada9;
 }
+.form-login{
+max-width: 400px;
+background: white(0, 0, 0 , 0.8);
+flex-grow: 1;
+padding: 30px 30px 40px;
+box-shadow: 0px 0px 17px 2px gray(255, 255, 255, 0.8);
+}
 body{
     border-radius: 10px;
     box-sizing: border-box;
     background-size: cover;
-
-
-
 }
+
+
 .tit{
-    max-width: 400px;
-    background: white(0, 0, 0 , 0.8);
-    flex-grow: 1;
-    padding: 30px 30px 40px;
-    box-shadow: 0px 0px 17px 2px gray(255, 255, 255, 0.8);
-    background-color: violet;
+    font-size: 25px;
+    color: black;
+    text-align: center;
+    margin-bottom: 30px;
+    background-color: darkviolet;
 
 
 }
 .form-group{
-    min-height: 100vh;
+    border-bottom: 1px solid black;
+    margin-top: 15px;
+    margin-bottom: 20px;
     display: flex;
-    justify-content: center;
-    align-items: center;
 
 }
 .form-control{
@@ -31,4 +36,16 @@ body{
     color: black;
     background-color: grey;
 
+}
+.font-submit {
+
+
+    background: transparent;
+    border: 1px solid black;
+    color: black;
+    width: 100%;
+    text-transform: uppercase;
+    padding: 6px 10px;
+    transition: 0.25s ease-in-out;
+    margin-top: 30px;
 }
